tests/models/struct/unnamed/u16/pass/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2)]
    u16
);
fn main() {}
